project structure foundation

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DT173 - Moment 5</title>
-</head>
-<body>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/style.css">
+  <title>DT173 - Moment 5</title>
+</head>
+
+<body>
+  <header>
+    <h1 class="logo">
+      Moment 5 - DT173G
+    </h1>
+    <div class="social">
+      <a href="https://github.com/jona-laa/" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/jonathan-laasonen-974aa617a/" target="_blank"><i
+          class="fab fa-linkedin fa-2x"></i></a>
+    </div>
+  </header>
+
+  <section id="courses" class="section-padding bg-light">
+
+    <div class="section-header">
+      <h2>Finished Courses</h2>
+    </div>
+
+    <div class="row trio">
+      <div>
+        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
+          <i class="fab fa-react fa-3x"></i>
+          <h3>React</h3>
+        </a>
+        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
+          interfaces.
+        </p>
+      </div>
+
+      <div>
+        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
+          <i class="fab fa-react fa-3x"></i>
+          <h3>React</h3>
+        </a>
+        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
+          interfaces.
+        </p>
+      </div>
+
+      <div>
+        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
+          <i class="fab fa-react fa-3x"></i>
+          <h3>React</h3>
+        </a>
+        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
+          interfaces.
+        </p>
+      </div>
+
+      <div>
+        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
+          <i class="fab fa-react fa-3x"></i>
+          <h3>React</h3>
+        </a>
+        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
+          interfaces.
+        </p>
+      </div>
+
+      <div>
+        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
+          <i class="fab fa-react fa-3x"></i>
+          <h3>React</h3>
+        </a>
+        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
+          interfaces.
+        </p>
+      </div>
+
+      <div>
+        <a href="https://angular.io/" class="icon-link angular" target="_blank">
+          <i class="fab fa-angular fa-3x"></i>
+          <h3>Angular</h3>
+        </a>
+        <p>Angular is an application design framework and development platform for creating efficient and
+          sophisticated single-page apps</p>
+      </div>
+
+      <div>
+        <a href="https://vuejs.org/" class="icon-link vue" target="_blank">
+          <i class="fab fa-vuejs fa-3x"></i>
+          <h3>Vue</h3>
+        </a>
+        <p>Vue.js is an open-source model–view–viewmodel JavaScript framework for building user interfaces
+          and single-page
+          applications.</p>
+      </div>
+    </div> <!-- flex-items end -->
+
+  </section> <!-- Front-end end-->
+
+  <footer class="bg-dark">
+    <div class="social">
+      <a href="https://github.com/jona-laa/" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/jonathan-laasonen-974aa617a/" target="_blank"><i
+          class="fab fa-linkedin fa-2x"></i></a>
+    </div>
+    <small>&copy; 2020 Jona.Laa.Dev </small>
+
+  </footer>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
