add -consuming data from REST

--- a/src/index.html
+++ b/src/index.html
@@ -30,75 +30,8 @@
       <h2>Finished Courses</h2>
     </div>
 
-    <div class="row trio">
-      <div>
-        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
-          <i class="fab fa-react fa-3x"></i>
-          <h3>React</h3>
-        </a>
-        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
-          interfaces.
-        </p>
-      </div>
+    <div id="courses-container" class="row trio">
 
-      <div>
-        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
-          <i class="fab fa-react fa-3x"></i>
-          <h3>React</h3>
-        </a>
-        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
-          interfaces.
-        </p>
-      </div>
-
-      <div>
-        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
-          <i class="fab fa-react fa-3x"></i>
-          <h3>React</h3>
-        </a>
-        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
-          interfaces.
-        </p>
-      </div>
-
-      <div>
-        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
-          <i class="fab fa-react fa-3x"></i>
-          <h3>React</h3>
-        </a>
-        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
-          interfaces.
-        </p>
-      </div>
-
-      <div>
-        <a href="https://reactjs.org/" class="icon-link react" target="_blank">
-          <i class="fab fa-react fa-3x"></i>
-          <h3>React</h3>
-        </a>
-        <p>React (also known as React.js or ReactJS) is an open-source JavaScript library for building user
-          interfaces.
-        </p>
-      </div>
-
-      <div>
-        <a href="https://angular.io/" class="icon-link angular" target="_blank">
-          <i class="fab fa-angular fa-3x"></i>
-          <h3>Angular</h3>
-        </a>
-        <p>Angular is an application design framework and development platform for creating efficient and
-          sophisticated single-page apps</p>
-      </div>
-
-      <div>
-        <a href="https://vuejs.org/" class="icon-link vue" target="_blank">
-          <i class="fab fa-vuejs fa-3x"></i>
-          <h3>Vue</h3>
-        </a>
-        <p>Vue.js is an open-source model–view–viewmodel JavaScript framework for building user interfaces
-          and single-page
-          applications.</p>
-      </div>
     </div> <!-- flex-items end -->
 
   </section> <!-- Front-end end-->
