add -update button functionality -PUT still broken though

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
             <div class="feedback">
               <span id="feedback-message"></span>
             </div>
-            <input type="submit" value="Send" id="submit" class="btn" onclick="addCourse(event)">
+            <input type="submit" value="Send" id="submit" class="btn" onclick="updateOrAdd(event, updateId)">
           </form>
         </div>
       </div> <!-- col end -->
