fix -submit on enter

--- a/src/index.html
+++ b/src/index.html
@@ -89,8 +89,8 @@
               <span id="feedback-message"></span>
             </div>
             <div class="contact-form_buttons">
-              <input type="submit" value="Cancel" id="submit" class="btn" onclick="cancelUpdate(event)">
               <input type="submit" value="Send" id="submit" class="btn" onclick="updateOrAdd(event, updateId)">
+              <input type="submit" value="Cancel" id="submit" class="btn" onclick="cancelForm(event)">
             </div>
           </form>
         </div>
