fix -Section header styles

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <section id="courses" class="section-padding bg-light">
 
       <div class="section-header">
-        <h2>Finished Courses</h2>
+        <h2>University Courses</h2>
       </div>
 
       <div id="courses-container" class="row trio">
