--- a/src/index.html
+++ b/src/index.html
@@ -59,30 +59,30 @@
           </div>
           <form>
             <div>
-              <label for="code"></label>
               <input type="text" name="code" id="code" placeholder="Enter Code                 (e.g: DT173G)" required>
+              <label for="code">Code</label>
             </div>
             <div>
-              <label for="name"></label>
               <input type="text" name="name" id="name" placeholder="Enter Name" required>
+              <label for="name">Name</label>
             </div>
             <div>
-              <label for="progression"></label>
               <input type="progression" name="progression" id="progression" placeholder="Enter Progression" required>
+              <label for="progression">Progression</label>
             </div>
             <div>
-              <label for="link"></label>
               <input type="text" name="link" id="link" placeholder="Enter link" required>
+              <label for="link">Link</label>
             </div>
             <div>
-              <label for="credits"></label>
               <input type="number" name="credits" id="credits" min="1" max="30"
-                placeholder="Enter credits               (e.g: 7.5)" required>
+              placeholder="Enter credits               (e.g: 7.5)" required>
+              <label for="credits">Credits</label>
             </div>
             <div>
-              <label for="icon"></label>
               <input type="text" name="icon" id="icon" placeholder="Font-Awesome icon    (e.g: fab fa-linkedin)"
-                required>
+              required>
+              <label for="icon">Icon</label>
             </div>
             <div class="feedback">
               <span id="feedback-message"></span>
